--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,40 @@
-        <ul>
+<style>
+        
+ul.navigation {
+  list-style: none;
+  padding: 0;
+  background: #f4f4f4;
+  width: 270px;
+}
+
+.navigation li {
+  border: 1px solid #e0e0e0;
+}
+.navigation li:first-child a {
+  border-radius: 5px 5px 0 0;
+}
+.navigation li:last-child a {
+  border-radius: 0 0 5px 5px;
+}
+
+.navigation a {
+  line-height:1;
+  font-size:11px;
+  color:#676767;
+  display:block;
+  text-align:center;
+}
+
+.navigation a:hover, .navigation a:focus {
+  color:#675C5C;
+  font-weight:bold;
+}
+
+.navigation ul a:active {
+  background-color:#f0f0f0;
+}
+</style>
+        <ul class="navigation">
           <li><a href="{{ "/" | absolute_url }}">Latest Releases and Commits Since</a></li>
           <li><a href="{{ "/licenses" | absolute_url }}">Licenses</a></li>
           <li><a href="{{ "/merge_types" | absolute_url }}">Merge Types</a></li>
