--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,17 +4,21 @@ ul.navigation {
   list-style: none;
   padding: 0;
   background: #f4f4f4;
+  border: 1px solid #e0e0e0;
+  border-radius: 5px;
   width: 270px;
 }
 
 .navigation li {
-  border: 1px solid #e0e0e0;
+  border-bottom: 1px solid #e0e0e0;
+  padding: .5rem;
 }
 .navigation li:first-child a {
   border-radius: 5px 5px 0 0;
 }
 .navigation li:last-child a {
   border-radius: 0 0 5px 5px;
+  border-bottom: 0;
 }
 
 .navigation a {
