--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -13,10 +13,10 @@ ul.navigation {
   border-bottom: 1px solid #e0e0e0;
   padding: .5rem;
 }
-.navigation li:first-child a {
+.navigation li:first-child {
   border-radius: 5px 5px 0 0;
 }
-.navigation li:last-child a {
+.navigation li:last-child {
   border-radius: 0 0 5px 5px;
   border-bottom: 0;
 }
